// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header Should not render main menu 1`] = `
<div
  className="StyledBox-sc-13pk1d4-0 iFsBNS"
>
  <div
    className="StyledBox-sc-13pk1d4-0 cJCWCR"
  >
    <a
      href="/"
      label="Centrifuge"
      onClick={[Function]}
      size="large"
    >
      <img
        className="StyledImage-ey4zx9-0 fmkmCl"
        src="logo.png"
      />
    </a>
    <div
      className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hyyRSo"
    />
    <div
      className="StyledBox-sc-13pk1d4-0 ffeAql"
    />
    <div
      className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hyyRSo"
    />
    <div
      className="StyledBox-sc-13pk1d4-0 BclQN"
    />
  </div>
</div>
`;

exports[`Header Should render main menu 1`] = `
<div
  className="StyledBox-sc-13pk1d4-0 iFsBNS"
>
  <div
    className="StyledBox-sc-13pk1d4-0 cJCWCR"
  >
    <a
      href="/"
      label="Centrifuge"
      onClick={[Function]}
      size="large"
    >
      <img
        className="StyledImage-ey4zx9-0 fmkmCl"
        src="logo.png"
      />
    </a>
    <div
      className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hyyRSo"
    />
    <div
      className="StyledBox-sc-13pk1d4-0 ffeAql"
    >
      <button
        className="StyledButton-sc-323bzc-0 jfbKsv"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        type="button"
      >
        Invoices
      </button>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 iChEkS"
      />
      <button
        className="StyledButton-sc-323bzc-0 jfbKsv"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
        type="button"
      >
        Contacts
      </button>
      <div
        className="StyledBox__StyledBoxGap-sc-13pk1d4-1 iChEkS"
      />
      <a
        className="StyledButton-sc-323bzc-0 jfbKsv"
        href="/api/users/logout"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        Logout
      </a>
    </div>
    <div
      className="StyledBox__StyledBoxGap-sc-13pk1d4-1 hyyRSo"
    />
    <div
      className="StyledBox-sc-13pk1d4-0 BclQN"
    />
  </div>
</div>
`;
